# SFML-Tron

./: .gitignore  CMakeLists.txt  FindSFML.cmake  README.md  bootstrap.sh
Code/Client/: AssetManager.cpp  AssetManager.h  Bike.cpp  Bike.h  BikeManager.cpp  BikeManager.h  Client.cpp  Client.h  ClientData.h  ClientState.h  ClientStateEnd.cpp  ClientStateEnd.h  ClientStateGame.cpp  ClientStateGame.h  ClientStateHandler.cpp  ClientStateHandler.h  ClientStateLobby.cpp  ClientStateLobby.h  ClientStateStart.cpp  ClientStateStart.h  ClientStates.h  GameAction.h  GameAudio.cpp  GameAudio.h  GameGrid.cpp  GameGrid.h  GameManager.cpp  GameManager.h  GridController.cpp  GridController.h  INetworkClient.h  InputHandler.cpp  InputHandler.h  LobbySlot.cpp  LobbySlot.h  LobbyUI.cpp  LobbyUI.h  NetworkClient.h  NetworkManager.cpp  NetworkManager.h  (+20 more)
Code/Game/: Bike.cpp  Bike.h  BikeState.cpp  BikeState.h  Cell.h  CellColour.h  CellValue.h  Colour.h  Constants.h  FileIO.cpp  FileIO.h  FlowControl.h  GamePacket.h  GameStateIDs.h  Grid.cpp  Grid.h  INetworkSimulation.h  ISimulation.h  InputHandler.h  JHelper.cpp  JHelper.h  ListenerSubject.h  MoveDirection.h  Noncopyable.h  PacketID.h  Player.cpp  Player.h  PlayerState.h  RandomEngine.cpp  RandomEngine.h  ScheduledTask.h  Scheduler.cpp  Scheduler.h  ServerSettings.h  SimpleTimer.h  Simulation.cpp  Simulation.h  SimulationListener.h  SimulationState.cpp  SimulationState.h  (+9 more)
Code/Server/: Client.cpp  Client.h  IServerSimulation.h  ISimulationServer.h  SimulationThread.cpp  SimulationThread.h  TronServer.cpp  TronServer.h  User.cpp  User.h  main_server.cpp
Libs/SFML-2.4.2/doc/: index.html - Shortcut.lnk
Projects/TronClientW32/: TronClientW32.vcxproj  TronClientW32.vcxproj.filters
Projects/TronGameW32/: TronGameW32.vcxproj  TronGameW32.vcxproj.filters
Projects/TronServerW32/: TronServerW32.vcxproj  TronServerW32.vcxproj.filters
Resources/: server_details.txt
